add new commands to help